--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "rmtar",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0"
   },
